--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -34,6 +34,11 @@ a {
   background: #f2f4f7;
   margin-top: 0px;
   padding: 10px 0;
+  outline: 1px solid #e7e7e7;
+}
+
+.input-padrao:focus-visible {
+  outline: 1px solid #000;
 }
 
 #group-actions {
