feat- adicionando tela de recuperar senha

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -21,7 +21,7 @@ a {
 }
 
 .description-login {
-  color: #9b9b9b;
+  color: #bfbfbf;
   font-family: "Roboto";
   font-size: 15px;
   font-weight: 400;
