--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,6 +8,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 /* --------------------------- */
 
+.bg-principal {
+  background-color: #f5f5f6;
+  min-height: 100vh;
+}
+
 a {
   outline: none;
   box-shadow: none;
@@ -96,4 +101,97 @@ input:-webkit-autofill {
 }
 .button-dialog:hover {
   background-color: #343434;
+}
+
+/* SIDEBAR */
+
+.button-padrao-sidebar {
+  background-color: rgba(0, 0, 0, 0.03);
+  box-shadow: 0px 1.053px 0px 0px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  text-align: left;
+  padding: 12px;
+  height: 48px;
+  border-radius: 15px;
+}
+
+.icon-sidebar {
+  background-color: #f0f0f0;
+  padding: 6px;
+  border-radius: 7px;
+}
+
+.item-menu {
+  display: flex;
+  align-items: center;
+  height: 47px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 15px;
+}
+.item-menu:hover {
+  background-color: #154aa1;
+}
+
+.sidebar-container {
+  border: 1px solid #c1c1c1;
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: black;
+  background-color: #fafafa;
+  padding: 26px 16px;
+  gap: 15px;
+}
+
+.group-buttons-sidebar {
+  border-top: 1px solid #e6e6e6;
+  padding-top: 20px;
+}
+
+/* SUBMENU */
+
+.submenu-container {
+  padding: 5px 0;
+  border: 1px solid #b4b4b4;
+}
+
+.title-submenu {
+  border-bottom: 1px solid #dadada;
+  padding: 10px 15px;
+  font-weight: 500;
+}
+
+.submenu-item {
+  margin: 5px 10px;
+}
+
+.group-menus {
+  gap: 2px !important;
+}
+
+/* TOPBAR */
+
+.icone-open-close {
+  font-size: 35px;
+  padding: 5px;
+  cursor: pointer;
+}
+.icone-open-close:hover {
+  background: #e6e6e6;
+  border-radius: 4px;
+}
+
+.title-page {
+  margin-left: 10px;
+  color: #000;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.title-page:hover {
+  background-color: #e9e9e9;
 }
