--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb {
 
 .bg-principal {
   background-color: #f5f5f6;
-  min-height: 3000px;
+  min-height: 100vh;
 }
 
 a {
