--- a/frontend/src/styles/tabela.css
+++ b/frontend/src/styles/tabela.css
@@ -44,6 +44,10 @@
   border-color: #000;
 }
 
+.container-custom-table {
+  overflow: auto;
+}
+
 @media (min-width: 1580px) {
   .container-custom-table {
     max-width: 1340px;
