--- a/frontend/src/styles/tabela.css
+++ b/frontend/src/styles/tabela.css
@@ -44,48 +44,29 @@
   border-color: #000;
 }
 
-.container-custom-table {
-  overflow: auto;
+.scroll-container {
+  overflow-x: auto;
+  cursor: default;
+  white-space: nowrap;
+  padding: 10px;
+  -webkit-overflow-scrolling: touch; /* melhora em mobile */
+  transition: scroll-left 0.2s ease-out;
 }
 
-@media (min-width: 1580px) {
-  .container-custom-table {
-    max-width: 1340px;
-  }
+.scroll-container::-webkit-scrollbar {
+  height: 5px; /* altura da barra horizontal */
 }
 
-@media (min-width: 1367px) and (max-width: 1579px) {
-  .container-custom-table {
-    max-width: 1060px;
-  }
+.scroll-container::-webkit-scrollbar-track {
+  background: #ffffff00; /* fundo do trilho */
+  border-radius: 40px;
 }
 
-@media (min-width: 1201px) and (max-width: 1366px) {
-  .container-custom-table {
-    max-width: 950px;
-  }
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color: #ffffff00; /* cor da barra */
+  border-radius: 4px;
 }
 
-@media (min-width: 1025px) and (max-width: 1200px) {
-  .container-custom-table {
-    max-width: 890px;
-  }
-}
-
-@media (min-width: 881px) and (max-width: 1024px) {
-  .container-custom-table {
-    max-width: 600px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 880px) {
-  .container-custom-table {
-    max-width: 600px;
-  }
-}
-
-@media (max-width: 767px) {
-  .container-custom-table {
-    max-width: 360px;
-  }
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background-color: #ffffff00;
 }
