--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,7 @@
 
 /* FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 /* --------------------------- */
 
@@ -260,6 +261,7 @@ input:-webkit-autofill {
   cursor: pointer;
   border-radius: 10px;
   position: relative;
+  background: #f0f0f0;
 }
 .icon-action-topbar:hover {
   background-color: #00000015;
@@ -286,7 +288,7 @@ input:-webkit-autofill {
 }
 
 .input-pesquisa {
-  border-radius: 13.431px;
+  border-radius: 10px;
   background: rgba(0, 0, 0, 0.04);
   color: #000;
 }
