--- a/frontend/src/styles/Pages.css
+++ b/frontend/src/styles/Pages.css
@@ -44,17 +44,20 @@
   border-color: #000;
 }
 
+/* ------------------------------------------------ */
+
+/* SCROLL DA TABELA */
+
 .scroll-container {
   overflow-x: auto;
   cursor: default;
   white-space: nowrap;
-  padding: 10px;
   -webkit-overflow-scrolling: touch; /* melhora em mobile */
   transition: scroll-left 0.2s ease-out;
 }
 
 .scroll-container::-webkit-scrollbar {
-  height: 5px; /* altura da barra horizontal */
+  height: 1px; /* altura da barra horizontal */
 }
 
 .scroll-container::-webkit-scrollbar-track {
@@ -64,9 +67,23 @@
 
 .scroll-container::-webkit-scrollbar-thumb {
   background-color: #ffffff00; /* cor da barra */
-  border-radius: 4px;
+  border-radius: 1px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb:hover {
   background-color: #ffffff00;
+}
+
+/* ------------------------------------------------ */
+
+.thead-table:before {
+  content: "";
+  position: absolute;
+  top: -18px;
+  left: 0;
+  right: 0;
+  height: 30px; /* Altura do fade, pode ajustar */
+  background: #f5f5f6;
+  pointer-events: none;
+  z-index: 40;
 }
