--- a/frontend/src/styles/Pages.css
+++ b/frontend/src/styles/Pages.css
@@ -87,3 +87,22 @@
   pointer-events: none;
   z-index: 40;
 }
+
+.container-icon-action {
+  border-radius: 15px;
+  border: 1.259px solid #fff;
+  background: rgba(217, 217, 217, 0.48);
+  box-shadow: 0px 1.129px 0px 0px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+.icon {
+  background: #f2f2f2;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 5px;
+}
+
+.container-icon-action:hover {
+  background: rgba(176, 176, 176, 0.48);
+  cursor: pointer;
+}
