--- a/frontend/src/styles/Pages.css
+++ b/frontend/src/styles/Pages.css
@@ -56,23 +56,23 @@
   transition: scroll-left 0.2s ease-out;
 }
 
-.scroll-container::-webkit-scrollbar {
-  height: 1px; /* altura da barra horizontal */
+/* .scroll-container::-webkit-scrollbar {
+  height: 1px;
 }
 
 .scroll-container::-webkit-scrollbar-track {
-  background: #ffffff00; /* fundo do trilho */
+  background: #ffffff00;
   border-radius: 40px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
-  background-color: #ffffff00; /* cor da barra */
+  background-color: #ffffff00;
   border-radius: 1px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb:hover {
   background-color: #ffffff00;
-}
+} */
 
 /* ------------------------------------------------ */
 
