--- a/frontend/src/styles/Pages.css
+++ b/frontend/src/styles/Pages.css
@@ -54,38 +54,46 @@
   white-space: nowrap;
   -webkit-overflow-scrolling: touch; /* melhora em mobile */
   transition: scroll-left 0.2s ease-out;
+  padding-right: 10px;
 }
 
-/* .scroll-container::-webkit-scrollbar {
-  height: 1px;
+.scroll-container::-webkit-scrollbar {
+  height: 4px;
+  width: 4px;
 }
 
 .scroll-container::-webkit-scrollbar-track {
-  background: #ffffff00;
+  background: #e9e9e9;
   border-radius: 40px;
+  margin-top: 30px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
-  background-color: #ffffff00;
-  border-radius: 1px;
+  background-color: #b9b9b9;
+  border-radius: 40px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb:hover {
-  background-color: #ffffff00;
-} */
+  background-color: #000;
+}
 
 /* ------------------------------------------------ */
 
 .thead-table:before {
   content: "";
   position: absolute;
-  top: -18px;
+  top: -12px;
   left: 0;
   right: 0;
   height: 30px;
   background: #f5f5f6;
   pointer-events: none;
   z-index: 40;
+}
+
+.thead-table tr {
+  z-index: 100;
+  position: relative;
 }
 
 .container-icon-action {
